<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMessage"
                style="@style/fontMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:gravity="center"
                android:maxLines="5"
                android:text="@string/kk_error_unknown"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnCancel"
                    style="@style/txtCancelButton"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_cancel_button"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/kk_cancel"
                    android:theme="@android:style/ThemeOverlay.Material.Dark" />

                <TextView
                    android:id="@+id/btnSubmit"
                    style="@style/txtNormalButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/kk_submit"
                    android:theme="@android:style/ThemeOverlay.Material.Dark" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>